# field_view

./: CMakeLists.txt  README.md
data/: config.json  field.uniform
dependencies/: CMakeLists.txt
dependencies/bitmap_image/: CMakeLists.txt
dependencies/bitmap_image/include/: bitmap_image.h
dependencies/egl/: CMakeLists.txt
dependencies/glbinding/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/imguicolortextedit/: CMakeLists.txt
dependencies/imguizmo/: CMakeLists.txt
dependencies/lodepng/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  config.cpp  context_egl.cpp  context_glfw.cpp  shader.cpp
src/common/include/: config.h  context_base.h  context_egl.h  context_glfw.h  glm_helper.h  imgui_helper.h  logger.h  shader.h
src/mag_field/: CMakeLists.txt  mag_cheb.cpp
src/mag_field/include/: mag_cheb.h  measurements.h
src/viz/: CMakeLists.txt  glsl.cpp  save_frame.cpp  viz_window.cpp
src/viz/include/: glsl.h  save_frame.h  viz_window.h
src/viz_instance/: CMakeLists.txt  viz_mesh.cpp  viz_mesh_lines.cpp  viz_mesh_ribbons.cpp  viz_mesh_surface.cpp  viz_mesh_tubes.cpp
src/viz_instance/include/: viz_mesh.h  viz_mesh_lines.h  viz_mesh_ribbons.h  viz_mesh_shaders.h  viz_mesh_surface.h  viz_mesh_tubes.h
